# lmm-stats

./: .gitignore  .gitmodules  Cargo.toml  arch.dia  run_db.sh
crates/api/client/: Cargo.toml
crates/api/common/: Cargo.toml
crates/api/common/src/: lib.rs  result.rs  tokens.rs
crates/api/common/src/auth/: get_session_info.rs  login.rs  mod.rs  refresh_session.rs
crates/api/common/src/clients/: create_group.rs  delete_client.rs  delete_group.rs  get_clients.rs  get_groups.rs  merge_clients.rs  mod.rs
crates/api/common/src/stats/: auth.rs  finish_auth.rs  get_auth_info.rs  get_clients_who.rs  get_session_info.rs  mod.rs  refresh_session.rs  send_event.rs
crates/api/common/src/systems/: create.rs  delete.rs  event_create.rs  event_delete.rs  get_events_of_owned.rs  get_owned.rs  get_owned_info.rs  list.rs  mod.rs  patch_owned.rs  set_active.rs
crates/api/common/src/systems/shared/: systems.rs
crates/api/common/src/users/: create.rs
crates/api/server/: Cargo.toml
crates/api/server/src/: lib.rs  tokens_pair.rs
crates/api/server/src/auth/: get_session_info.rs  login.rs  mod.rs  refresh_session.rs
crates/api/server/src/auth/shared/: access_token.rs
crates/api/server/src/clients/: create_group.rs  delete_client.rs  delete_group.rs  get_clients.rs  get_groups.rs  merge_clients.rs
crates/api/server/src/stats/: auth.rs  finish_auth.rs  get_auth_info.rs  get_clients_who.rs  get_session_info.rs  mod.rs  refresh_session.rs  send_event.rs
crates/api/server/src/stats/shared/: access_token.rs
crates/api/server/src/systems/: create.rs  delete.rs  event_create.rs  event_delete.rs  get_events_of_owned.rs  get_info.rs  get_owned.rs  get_owned_info.rs  list.rs  mod.rs  patch_owned.rs  set_active.rs
crates/api/server/src/users/: create_user.rs
crates/app/backend/: Cargo.toml
crates/app/backend/migrations/: 20240524083734_create_users.up.sql  20240603155138_create_client_groups.down.sql
crates/app/backend/src/: lib.rs
crates/app/backend/src/api/: mod.rs
crates/app/backend/src/api/v1/: mod.rs  response.rs
crates/app/backend/src/api/v1/auth/: login.rs  mod.rs  refresh_session.rs
crates/app/backend/src/api/v1/auth/session/: middlewares.rs  mod.rs  session.rs
crates/app/backend/src/api/v1/clients/: create_group.rs  delete_client.rs  delete_group.rs  get_clients.rs  get_groups.rs  merge_clients.rs  mod.rs
crates/app/backend/src/api/v1/stats/: finish_auth.rs  get_auth_info.rs  get_clients.rs  get_clients_who.rs  mod.rs  refresh_session.rs  send_event.rs  start_auth.rs
crates/app/backend/src/api/v1/stats/session/: session.rs
crates/app/backend/src/api/v1/systems/: create.rs  create_event.rs  delete_event.rs  delete_system.rs  get_events_of_owned.rs  get_my.rs  get_owned_info.rs  list.rs  mod.rs  patch_owned.rs  set_active.rs
crates/app/backend/src/api/v1/users/: create.rs  mod.rs
crates/app/frontend/: Cargo.toml
crates/app/frontend/src/: lib.rs
crates/app/frontend/src/core/: mod.rs  session.rs  tera.rs
crates/app/frontend/src/core/api/: mod.rs  requester.rs  result.rs  session.rs
crates/app/frontend/src/core/errors/: forbidden.rs  internal.rs  mod.rs  unauthorized.rs
crates/app/frontend/src/site/: login.rs  mod.rs
crates/app/frontend/src/site/panel/: mod.rs  stats.rs  users.rs
crates/app/frontend/src/site/panel/clients/: create_group.rs  delete_client.rs  delete_group.rs  list.rs  merge_clients.rs  mod.rs
crates/app/frontend/src/site/panel/stats/: list.rs  mod.rs  set_active.rs  system.rs
crates/app/frontend/src/site/panel/systems/: config.rs  create.rs  event_create.rs  event_delete.rs  events.rs  mod.rs  owned.rs
crates/features/clients/: Cargo.toml
crates/features/event_calls/: Cargo.toml
crates/features/event_calls/src/: lib.rs
crates/features/events/: Cargo.toml
crates/features/systems/: Cargo.toml
crates/features/tokens/: Cargo.toml
crates/features/tokens/src/: jwt.rs  (+1 more)
crates/features/users/: Cargo.toml
migrations/: 20240524083734_create_users.down.sql  20240603144841_create_systems.down.sql  20240603144841_create_systems.up.sql  20240603154340_create_events.up.sql  20240603155138_create_client_groups.up.sql  20240603155509_create_clients.up.sql  20240603155628_create_event_calls.down.sql  20240603155628_create_event_calls.up.sql  20240820154309_add_activated_at.down.sql  20240820154309_add_activated_at.up.sql  20240820185256_change_at_to_timestamp.down.sql  20240820185256_change_at_to_timestamp.up.sql
static/css/: style.css
static/js/: api.js
templates/: apply_session.tera  login.tera
templates/layout/: base.tera  page.tera
templates/panel/: base.tera  stats.tera  users.tera
templates/panel/clients/: group_exists.tera  list.tera  merge_clients.tera
templates/panel/stats/: list.tera  system.tera
templates/panel/systems/: config.tera  create.tera  events.tera  owned.tera
(+18 files in other folders)
