[package]
name = "lmm-stats"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend"

[[bin]]
name = "backend"

[workspace]
resolver = "2"
members = [
    "crates/features/tokens",
    "crates/features/users",
    "crates/features/systems",
    "crates/features/clients",
    "crates/features/events",
    "crates/features/event_calls",
    "crates/app/backend", 
    "crates/app/frontend",
    "crates/api/common",
    "crates/api/server",
    "crates/api/client",
]

[patch.crates-io]
abstract-db = { path = "../web-libs/abstract-db" }
abstract-sqlx-bindings = { path = "../web-libs/abstract-sqlx-bindings" }
# features
feature-tokens = { path = "crates/features/tokens" }
feature-users = { path = "crates/features/users" }
feature-systems = { path = "crates/features/systems" }
feature-clients = { path = "crates/features/clients" }
feature-events = { path = "crates/features/events" }
feature-event-calls = { path = "crates/features/event_calls" }
# api
api-common = { path = "crates/api/common" }
api-server = { path = "crates/api/server" }
api-client = { path = "crates/api/client" }
# app
backend = { path = "crates/app/backend" }
frontend = { path = "crates/app/frontend" }

[dependencies]
anyhow = "1.0.86"
backend = "0.1.0"
frontend = "0.1.0"
tokio = { version = "1.38.0", features = ["full"] }
